--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,18 +10,18 @@ categories = ["can"]
 keywords = ["can", "canopen"]
 
 [dependencies]
-libc = "0.2"
-nb = "1.1"
-embedded-can = "0.4"
+alloc-cortex-m = "0.4"
 cortex-m = "0.7"
-
-rp-pico = "0.8"
 cortex-m-rt = "0.7"
-embedded-hal = { version = "0.2.5", features = ["unproven"] }
-rp2040-hal = { version = "0.9", features = ["rt", "critical-section-impl"] }
-
 defmt = "0.3"
 defmt-rtt = "0.4"
+embedded-can = "0.4"
+embedded-hal = { version = "0.2.5", features = ["unproven"] }
+libc = "0.2"
+panic-probe = "0.3"
+nb = "1.1"
+rp2040-hal = { version = "0.9", features = ["rt", "critical-section-impl"] }
+rp-pico = "0.8"
 
 [build-dependencies]
 bindgen = "0.68"
