--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "can2040"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2021"
 authors = ["Zephyr Guo <zephyr@atomi.ai>"]
 license = "GPL-3.0"
@@ -16,12 +16,12 @@ cortex-m-rt = "0.7"
 defmt = "0.3"
 defmt-rtt = "0.4"
 embedded-can = "0.4"
-embedded-hal = { version = "0.2.5", features = ["unproven"] }
+embedded-hal = "1.0"
 libc = "0.2"
 panic-probe = "0.3"
 nb = "1.1"
-rp2040-hal = { version = "0.9", features = ["rt", "critical-section-impl"] }
-rp-pico = "0.8"
+rp2040-hal = { version = "0.10", features = ["rt", "critical-section-impl"] }
+rp-pico = "0.9"
 
 [build-dependencies]
-bindgen = "0.68"
+bindgen = "0.69"
